# bavard

./: .tool-versions  README.md  pyproject.toml
bavard_tts/: __init__.py  routes.py  scripts.py  views.py
bavard_tts/services/: tts_service.py
bavard_tts/static/css/: style.css
bavard_tts/static/js/: main.js
bavard_tts/templates/: home.jinja2
