[tool.poetry]
name = "bavard-tts"
version = "0.1.0"
description = "A text-to-speech web application using Pyramid and TorchAudio"
authors = ["Ramon Ramos <ramonlimaramos@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pyramid = "^2.0"
torch = ">=2.0.0,<2.1.0"
torchaudio = ">=2.0.0,<2.1.0"
waitress = "^2.1.2"
pyramid-jinja2 = "^2.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
serve = "bavard_tts.scripts:serve_cmd" 